--- a/source/_posts/2018-01-17-Charles-备忘.md
+++ b/source/_posts/2018-01-17-Charles-备忘.md
@@ -1,5 +1,5 @@
 ---
-title: Charles备忘
+title: charles使用笔记
 date: 2018-01-17 16:36:17
 tags:
  - charles
@@ -7,93 +7,113 @@ categories:
  - tool
 ---
 
-> 最近使用Charles时遇到一些坑，现记录如下
+> 记录使用charles的过程与遇到的一些坑。
 
 ## 准备工作
 
-一台mac电脑、一个手机、局域网、`Charles`，本人写下这篇笔记时软件版本：破解版、`v4.0.2`。
-
-## 安装`Charles`
-
-去`Charles`的 [官方网站](http://www.charlesproxy.com)下载最新版的`Charles`安装包，是一个 dmg 后缀的文件。打开后将`Charles`拖到 Application 目录下即完成安装。
+在`Charles` [官方网站](http://www.charlesproxy.com)下载最新版的`Charles`安装包，是一个 dmg 后缀的文件。打开后将`Charles`拖到 Application 目录下即完成安装。本人版本是`4.0.2`。
 
 <!-- more -->
 
-## 将`Charles`设置成系统代理
+## 开始抓包
+
+### 将`Charles`设置成系统代理
 
 之前提到，`Charles` 是通过将自己设置成代理服务器来完成封包截取的，所以使用`Charles`的第一步是将其设置成系统的代理服务器。
 
-启动`Charles`后，第一次`Charles`会请求你给它设置系统代理的权限。你可以输入登录密码授予`Charles`该权限。你也可以忽略该请求，然后在需要将`Charles`设置成系统代理时，选择菜单中的 `“Proxy” -> “Mac OS X Proxy”` 来将`Charles`设置成系统代理。如下所示：
+启动`Charles`后，第一次`Charles`会请求你给它设置系统代理的权限。你可以输入登录密码授予`Charles`该权限。你也可以忽略该请求，然后在需要将`Charles`设置成系统代理时，选择菜单中的 `"Proxy" -> "Mac OS X Proxy"` 来将`Charles`设置成系统代理。如下所示：
 
-<img src="/images/charles/1.png" alt="图1" width="300">
+<img src="/images/charles/1.png" alt="图1" width="260">
 
 之后，你就可以看到源源不断的网络请求出现在`Charles`的界面中。
 
 需要注意的是，`Chrome` 和 `Firefox` 浏览器默认并不使用系统的代理服务器设置，而`Charles`是通过将自己设置成代理服务器来完成封包截取的，所以在默认情况下无法截取 `Chrome` 和 `Firefox` 浏览器的网络通讯内容。如果你需要截取的话，在 `Chrome` 中设置成使用系统的代理服务器设置即可，或者直接将代理服务器设置成 `127.0.0.1:8888` 也可达到相同效果。
 
-> 作者使用了 [XX-net](https://github.com/XX-net/XX-Net/wiki/%E4%BD%BF%E7%94%A8Chrome%E6%B5%8F%E8%A7%88%E5%99%A8) 代理，可在chrome下通过此插件设置系统代理
+> 本人使用的[XX-net](https://github.com/XX-net/XX-Net/wiki/%E4%BD%BF%E7%94%A8Chrome%E6%B5%8F%E8%A7%88%E5%99%A8)代理，可在chrome下通过此插件设置系统代理
 
-## 抓取手机数据包
+### 抓取手机数据包
 
-`Charles` 通常用来截取本地上的网络封包，但是当我们需要时，我们也可以用来截取其它设备上的网络请求。下面我就以 `iPhone` 为例，讲解如何进行相应操作。
+`Charles` 通常用来截取本地网络封包，但是当我们需要时，我们也可以用来截取其它设备上的网络请求。下面我就以 `iPhone` 为例，讲解如何进行相应操作。
 
-### `Charles`上的设置
+#### `charles`上的设置
 
-要截取 `iPhone` 上的网络请求，我们首先需要将`Charles`的代理功能打开。在`Charles`的菜单栏上选择`“Proxy”->”Proxy Settings”`，填入代理端口 `8888`，并且勾上 `“Enable transparent HTTP proxying”` 就完成了在`Charles`上的设置。如下图所示:
+要截取 `iPhone` 上的网络请求，我们首先需要将`Charles`的代理功能打开。在`Charles`的菜单栏上选择`"Proxy"->"Proxy Settings"`，填入代理端口 `8888`，并且勾上 `"Enable transparent HTTP proxying"` 就完成了在`Charles`上的设置。如下图所示:
 
 <img src="/images/charles/2.png" alt="图2" width="500">
 
-### `iPhone` 上的设置
+#### 手机上的设置
 
-首先我们需要获取`Charles`运行所在电脑的`IP`地址，`Charles`的顶部菜单的 `“Help”->”Local IP Address”`，即可在弹出的对话框中看到 `IP` 地址，如下图所示：
+首先我们需要获取`Charles`运行所在电脑的`IP`地址，`Charles`的顶部菜单的 `"Help"->"Local IP Address"`，即可在弹出的对话框中看到 `IP` 地址，如下图所示：
 
 <img src="/images/charles/3.png" alt="图3" width="500">
 
-在 `iPhone` 的 `“设置” -> “无线局域网”` 中，可以看到当前连接的`wifi`名，通过点击右边的详情键，可以看到当前连接上的`wifi`的详细信息，包括 `IP` 地址，子网掩码等信息。在其最底部有`「HTTP 代理」`一项，我们将其切换成手动，然后填上`Charles`运行所在的电脑的 `IP`，以及端口号 `8888`，如下图所示：
+在 `iPhone` 的 `"设置" -> "无线局域网"` 中，可以看到当前连接的`wifi`名，通过点击右边的详情键，可以看到当前连接上的`wifi`的详细信息，包括 `IP` 地址，子网掩码等信息。在其最底部有`「HTTP 代理」`一项，我们将其切换成手动，然后填上`Charles`运行所在的电脑的 `IP`，以及端口号 `8888`，如下图所示：
 
 <img src="/images/charles/4.png" alt="图4" width="300">
 
-设置好之后，我们打开`iPhone`上的任意需要网络通讯的程序，就可以看到`Charles`弹出`iPhone`请求连接的确认菜单（如下图所示），点击 `“Allow”` 即可完成设置。
+设置好之后，我们打开`iPhone`上的任意需要网络通讯的程序，就可以看到`Charles`弹出`iPhone`请求连接的确认菜单（如下图所示），点击 `"Allow"` 即可完成设置。
 
 <img src="/images/charles/5.png" alt="图5" width="500">
 
 
-## 截取`Https`通讯信息
+## 截取`https`
 
 ### 安装证书
 
 如果你需要截取分析`Https`协议相关的内容。那么需要安装`Charles`的 `CA` 证书。具体步骤如下。
 
-首先我们需要在 `Mac` 电脑上安装证书。点击`Charles`的顶部菜单，选择 `“Help” -> “SSL Proxying” -> “Install`Charles`Root Certificate”`，然后输入系统的帐号密码，即可在 `KeyChain` 看到添加好的证书。如下图所示：
+首先我们需要在 `Mac` 电脑上安装证书。点击`Charles`的顶部菜单，选择 `"Help" -> "SSL Proxying" -> "Install`Charles`Root Certificate"`，然后输入系统的帐号密码，即可在 `KeyChain` 看到添加好的证书。如下图所示：
 
 <img src="/images/charles/6.png" alt="图6" width="100%">
 
-### 电脑端安装证书
+#### 电脑端
 
 选择_图6_ __红框部分__，然后需要对证书信任，之后会弹出钥匙串，如果不弹出，请自行打开钥匙串，如下图：
 
-<img src="/images/charles/7.png" alt="图7" width="600">
+<img src="/images/charles/7.png" alt="图7" width="">
 
 双击证书，选择始终信任
 
-<img src="/images/charles/8.png" alt="图8" width="600">
+<img src="/images/charles/8.png" alt="图8" width="">
 
-### 手机端安装证书
+#### 手机端
 
 选择_图6_ __绿框部分__，在手机上输入弹出框中的链接地址进行安装
 
-<img src="/images/charles/9.png" alt="图9" width="600">
+<img src="/images/charles/9.png" alt="图9" width="">
 
 ### 添加`SSL Proxying`
 
 证书安装完毕后，还需要对SSL做以下处理：
 
-1. 进入`Proxy -> SSL Proxying Settings`
-2. 勾选`“Enable SSL Proxying”`，并点击下方的`Add`
-3. 在弹出的`“Edit Location”`中，输入`Host`和`Port`都为`“＊”`（看提示这样配置可以抓到所有`https`的包），然后进行添加
+1. 进入`"Proxy" -> "SSL Proxying Settings"`
+2. 勾选`"Enable SSL Proxying"`，并点击下方的`Add`
+3. 在弹出的`"Edit Location"`中，输入`Host`和`Port`都为`"＊"`（看提示这样配置可以抓到所有`https`的包），然后进行添加
 
+以上设置完毕后就可以正常抓取数据了。
 
-### 参考：
+## 代理本地文件
 
-1. [Charles 从入门到精通](http://blog.devtang.com/2015/11/14/charles-introduction/#%E6%88%AA%E5%8F%96-iPhone-%E4%B8%8A%E7%9A%84%E7%BD%91%E7%BB%9C%E5%B0%81%E5%8C%85)
-2. [Charles使用详解](http://blog.csdn.net/zhouzhoujianquan/article/details/52585077)
+我们在查找线上bug时，由于文件是压缩版或请求数据不可控，导致无法直接调试，此时一般会选择在本地环境模拟线上数据进行调试。
+
+现在有了charles的`Map Local`功能，可以将线上文件代理成本地文件，达到修改本地文件，访问线上地址即可查看效果，步骤如下图：
+
+<img src="/images/charles/10.jpg" alt="点击查看大图" width="">
+
+window中的Fiddler设置参考这篇[文章](https://www.jianshu.com/p/3e3aa1cf4850)
+
+## 踩过的坑
+
+### 开启了`charles`为什么抓不到请求？
+
+先确保是否将`charles`设置为`系统代理`，再确保浏览器是否也更改为`使用系统代理`。若以上正确，查看电脑是否安装了vpn等翻墙工具，解决方法：
+
+1. 关闭vpn翻墙工具
+2. 打开`wifi`中的`网络偏好设置`->`高级`->`代理`->不勾选 `自动代理配置`
+3. 重启charles
+
+**参考：**
+
+- [Charles从入门到精通](http://blog.devtang.com/2015/11/14/charles-introduction/#%E6%88%AA%E5%8F%96-iPhone-%E4%B8%8A%E7%9A%84%E7%BD%91%E7%BB%9C%E5%B0%81%E5%8C%85)
+- [Charles使用详解](http://blog.csdn.net/zhouzhoujianquan/article/details/52585077)
+- [Mac下使用charles遇到的问题以及解决办法](http://blog.csdn.net/songzhuo1991/article/details/70157407)
