--- a/source/_posts/2018-02-05-代码笔记.md
+++ b/source/_posts/2018-02-05-代码笔记.md
@@ -20,7 +20,7 @@ categories:
 
 ``` js
 // 获取到一个CSSStyleDeclaration对象，它是一个CSS属性键值对的集合。
-var divstyle = document.createElement('div').style;
+var divStyle = document.createElement('div').style;
 
 /**
  * 将css前缀转为驼峰规则，如：-webkit-box-pack -> WebkitBoxPack
@@ -36,7 +36,7 @@ function camelCase(str) {
  * 将驼峰写法前缀转换为 -xx- 写法
  * @param {string} str 驼峰式写法
  */
-function uncamelCase(str) {
+function unCamelCase(str) {
     return str.replace(/([A-Z]|^ms)/g, "-$1").toLowerCase();
 }
 
@@ -44,7 +44,7 @@ function uncamelCase(str) {
  * 返回当前浏览器的前缀，如：chrome下返回 -webkit-  字符串
  */
 function cssVender() {
-    var ds = divstyle,
+    var ds = divStyle,
         cases = ['-webkit-', '-moz-', '-ms-', '-o-', ''],
         i = 0;
     do {
@@ -60,7 +60,7 @@ function cssVender() {
  * @param {string} property 传入的css属性名
  */
 function fixCSS(property) {
-    var ds = divstyle,
+    var ds = divStyle,
         pre = cssVender();
     return (camelCase(property) in ds) && property || (camelCase(pre + property) in ds) && pre + property || property;
 }
@@ -71,27 +71,26 @@ function fixCSS(property) {
  */
 function isCSS(property) {
     var name = camelCase(fixCSS(property));
-    return (name in divstyle) && name || '';
+    return (name in divStyle) && name || '';
 }
 ```
 
 ## 获取元素的宽高等
 
-方法1：
+使用原生js，有两种方法获取元素宽高
 
 ``` js
-var testElement = document.querySelector('.test'),
-    width = testElement.offsetWidth,
-    height = testElement.offsetHeight,
-    left = testElement.offsetLeft,
-    top = testElement.offsetTop;
-```
+var elem = document.getElementById('js-test');
 
-方法2：
+// 方法1：
+var width = elem.offsetWidth,
+    height = elem.offsetHeight,
+    left = elem.offsetLeft,
+    top = elem.offsetTop;
 
-``` js
+// 方法2：
 // IE中调用该方法的返回对象没有width， height这两个属性，因此做了简单的兼容处理
-var rect = testElement.getBoundingClientRect(),
+var rect = elem.getBoundingClientRect(),
     top = rect.top,
     left = rect.left,
     right = rect.right,
@@ -100,15 +99,17 @@ var rect = testElement.getBoundingClientRect(),
     height = rect.height || (bottom - top);
 ```
 
-注意，`obj.offsetTop`属性获取的值是绝对的，不会随页面滚动而发生变化。但`getBoundingClientRect()`获取的`top`和`left`属性值是相对于视窗的，会随浏览器滚动而发生变化，若要跟offsetTop一样的效果，可以做如下处理：
+注意，`obj.offsetTop`属性获取的值是绝对的，不会随页面滚动而发生变化。但`getBoundingClientRect()`获取的`top`和`left`属性值是相对于视窗的，会随浏览器滚动而发生变化，若实现`offsetTop`一样效果，可以做如下处理：
 
 ``` js
-var elem = document.querySelector('.btn');
+var elem = document.getElementById('js-btn');
 
 window.addEventListener('scroll', function () {
+    // 获取滚动距离，做了兼容处理
     var scrollTop = (((t = document.documentElement) || (t = document.body.parentNode)) && typeof t.scrollTop == 'number' ? t : document.body).scrollTop;
     var scrollLeft = (((t = document.documentElement) || (t = document.body.parentNode)) && typeof t.scrollLeft == 'number' ? t : document.body).scrollLeft;
 
+    // 即时获取元素属性
     var rect = elem.getBoundingClientRect();
 
     console.log(elem.offsetTop);
@@ -120,21 +121,22 @@ window.addEventListener('scroll', function () {
 
 关于`getBoundingClientRect`的兼容性，查看[MDN - getBoundingClientRect](https://developer.mozilla.org/zh-CN/docs/Web/API/Element/getBoundingClientRect)
 
-## 使用js获取css样式问题
+## 获取css样式
 
 当我们在使用rem单位时，经常会碰到小数点的单位，而某些属性是不会拿到小数点单位的。测试如下：
 
 ``` js
-var getStyle = function (obj, attr) {
+function getStyle(obj, attr) {
     if (obj.currentStyle) { // ie6/7/8
         return obj.currentStyle[attr];
     } else { // 9+
         return getComputedStyle(obj, false)[attr];
     }
-};
+}
 
 var testElem = document.getElementById('js-btn');
 testElem.style.width = '98.5px';
+
 console.log(getStyle(testElem, 'width')); // '98.5px'
 console.log(testElem.offsetWidth); // 99
 ```
