--- a/source/_posts/2017-09-05-sticky.md
+++ b/source/_posts/2017-09-05-sticky.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: position:sticky用法与坑
+title: position:sticky的用法
 keywords: position, sticky, 粘性固定
 tags:
  - css
@@ -28,7 +28,7 @@ categories:
 
 ### 生效条件
 
-需要注意的是，使用该属性有几个必要条件，否则会失效：
+需要注意的是，使用该属性有几个必要条件，否则不会生效：
 
 - 父元素不能`overflow:hidden`或者`overflow:auto`属性。
 - 必须指定`top`、`bottom`、`left`、`right`4个值之一，否则只会处于相对定位
