--- a/source/_posts/2018-01-17-Charles-备忘.md
+++ b/source/_posts/2018-01-17-Charles-备忘.md
@@ -104,15 +104,36 @@ window中的Fiddler设置参考这篇[文章](https://www.jianshu.com/p/3e3aa1cf
 
 ## 踩过的坑
 
-### 开启了`charles`为什么抓不到请求？
+### 电脑端无法抓包
 
-先确保是否将`charles`设置为`系统代理`，再确保浏览器是否也更改为`使用系统代理`。若以上正确，查看电脑是否安装了vpn等翻墙工具，解决方法：
+**问题原因：**
+
+确认两个代理设置是否正确，一是`charles`设置为系统代理：`Mac OS X Proxy`，二是浏览器也使用的`系统代理`。
+
+若以上确认无误。分析为本地开启了vpn等翻墙工具。
+
+**解决方法：**
 
 1. 关闭vpn翻墙工具
 2. 打开`wifi`中的`网络偏好设置`->`高级`->`代理`->不勾选 `自动代理配置`
 3. 重启charles
 
-**参考：**
+### 手机上安装了证书，仍然无法抓包？
+
+`iphone`系统更新到`iOS 10.3`后，https的请求都会失败，提示错误信息为`Failure SSLHandshake: Received fatal alert: unknown_ca`和`You may need to configure your browser or application to trust the Charles Root Certificate.`
+
+然而之前任何问题都没有，并且相关设置都正确：Mac上安装了Charles的根证书，并且设置了始终信任，然后手机上也登录了`http://chls.pro/ssl`安装了描述文件,一切都按正常程序走的,但是错误始终无法解决。
+
+**问题原因：**
+
+虽然charles的根证书已经在安装列表中显示,但它是被关闭的。在iOS 10.3之前,当你将安装一个自定义证书,iOS会默认信任,不需要进一步的设置。而iOS 10.3之后,安装新的自定义证书默认是不受信任的。如果要信任已安装的自定义证书,需要手动打开开关以信任证书。
+
+**解决方法：**
+
+设置->通用->关于本机->证书信任设置->找到`charles proxy custom root certificate`然后信任该证书即可。
+
+
+## 参考
 
 - [Charles从入门到精通](http://blog.devtang.com/2015/11/14/charles-introduction/#%E6%88%AA%E5%8F%96-iPhone-%E4%B8%8A%E7%9A%84%E7%BD%91%E7%BB%9C%E5%B0%81%E5%8C%85)
 - [Charles使用详解](http://blog.csdn.net/zhouzhoujianquan/article/details/52585077)
